# Docket-Milestone-Escrow-with-OnChain-Arbitration_1.0

./: .env.example  .gitignore  ARCHITECTURE.md  Cargo.toml  DEPLOYMENT.md  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js  test-balance.js  test-enum.js  test-scval.js  test-scval2.js
.github/workflows/: ci.yml  deploy-contracts.yml  deploy-preview.yml  deploy.yml
contracts/arbiter/: Cargo.toml
contracts/arbiter/src/: lib.rs  test.rs
contracts/bounty-board/: Cargo.toml
contracts/bounty-board/src/: lib.rs  test.rs
contracts/contributor-registry/: Cargo.toml
contracts/contributor-registry/src/: lib.rs  test.rs
contracts/escrow/: Cargo.toml
contracts/escrow/src/: lib.rs  test.rs
docs/: ARCHITECTURE.md  DEPLOYMENT.md  SUBMISSION_CHECKLIST.md
frontend/: .env.example  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ActivityTicker.tsx  BountyBoardGrid.tsx  BountyCard.tsx  BountyCardSkeleton.tsx  ClaimBountyModal.tsx  Header.tsx  Hero.tsx  PostBountyModal.tsx  ReputationPanel.tsx  StatusBadge.test.tsx  StatusBadge.tsx  Toast.tsx
scripts/: build.sh  deploy_testnet.sh
src/: App.jsx  index.css
src/components/: ActivityFeed.jsx  Banner.jsx  CreateJobForm.jsx  Header.jsx  Hero.jsx  JobCard.jsx  JobCardSkeleton.jsx  MilestoneRow.jsx  StampBadge.jsx
src/hooks/: useWallet.js
src/lib/: config.js  escrowActions.js  events.js  formatEvent.js  sorobanClient.js  wallet.js
src/test/: StampBadge.test.jsx  formatEvent.test.js
(+9 files in other folders)
