[package]
name = "bounty-board"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
contributor-registry = { path = "../contributor-registry", features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]
